vinh/optimize clean code for course service and add update course method